# murmur

./: .gitignore  README.md  index.html  package-lock.json  package.json  sidecar_stderr.txt  test_clean.py  test_clipboard.py
.github/workflows/: release.yml
brand/: brand-guide.md
sidecar/: build_sidecar.py  requirements.txt  tts_server.py
site/: package-lock.json  package.json
site/scripts/: generate-theme-icons.mjs
site/src/app/: globals.css  layout.tsx  page.tsx
site/src/app/account/: page.tsx
site/src/app/api/stripe/webhook/: route.ts
site/src/app/auth/callback/: route.ts
site/src/app/brand/: page.tsx
site/src/app/docs/: page.tsx
site/src/app/download/: page.tsx
site/src/app/pricing/: page.tsx
site/src/app/privacy/: page.tsx
site/src/app/terms/: page.tsx
site/src/components/: auth-button.tsx  footer.tsx  hero-title.tsx  hero-viz.tsx  nav.tsx  pill-wave.tsx  theme-toggle.tsx
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  clipboard.rs  device.rs  hotkey.rs  lib.rs  sidecar.rs  tray.rs
src/components/: PopupBar.tsx  PopupBarA.tsx  PopupBarB.tsx  PopupBarC.tsx
src/hooks/: useTTS.ts
src/lib/: types.ts
src/styles/: globals.css
