[package]
name = "murmur"
version = "0.1.0"
description = "Text-to-speech utility"
authors = ["you"]
edition = "2021"

[lib]
name = "murmur_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.20", default-features = false, features = ["wav"] }
base64 = "0.22"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["sync", "time"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_Input_KeyboardAndMouse"] }
